# cmp202

./: .gitignore  CMakeLists.txt  libraries.txt  log_thread.cpp  log_thread.h  main.cpp  mandelbrot.cpp  mandelbrot.h  tga.cpp  tga.h
